- abi - 更新获取链上/下积分
