# mods/points/api/res/AccountPointsInfoRes.go
@@ -1,0 +1,6 @@
+package res
+
+type AccountPointsInfoRes struct {
+	Points     int64 `json:"points"`
+	LinkPoints int64 `json:"linkPoints"`
+}
